# General sources
set(SOURCES_FILES COPYBOX.CPP DIRTYBOX.CPP GPRINTF.CPP GRAPH.CPP INITMODE.CPP PLOT.CPP RECT.CPP SCREEN.CPP)

set(SOURCES_FILES_ASM AFFSTR.ASM BLITBOX.ASM BLITBOXF.ASM BLITBOXI.ASM BOX.ASM CALCMASK.ASM CLIP.ASM CLRBOX.ASM
        CLRBOXF.ASM CLRBOXI.ASM COPYBOX.ASM COPYBOXF.ASM COPYBOXI.ASM COPYBOXM.ASM COPYMASK.ASM CPYBLOCI.ASM
        CPYBLOCK.ASM FONT.ASM GRAPH.ASM MASK.ASM RESBLOCK.ASM SAVBLOCK.ASM SCALEBOX.ASM SCALESPI.ASM SCALESPT.ASM
        SCREENXY.ASM SHADE.ASM)

set(SOURCES_FILES_ASM_EXCLUDED BLITBOXM.ASM CLRBOXM.ASM LOGPHYS.ASM)

# Windows specific sources
set(SOURCES_FILES_WIN SDL.CPP)

# DOS specific sources
set(SOURCES_FILES_DOS MOUSEDOS.CPP VESA.CPP)
set(SOURCES_FILES_ASM_DOS BLITBOV.ASM BLITBOVF.ASM BLITBOVI.ASM BLITBOVM.ASM CLEABOV.ASM CLEABOVF.ASM CLEABOVI.ASM
        CLEABOVM.ASM COPYBOV.ASM COPYBOVF.ASM COPYBOVI.ASM COPYBOVM.ASM VESA.ASM)

add_library(svg ${SOURCES_FILES} ${SOURCES_FILES_ASM} ${SOURCES_FILES_WIN})
target_link_libraries(svg PUBLIC sys SDL2::SDL2)

# Configure all ASM files to be recognized as such (workaround for bug where .ASM uppercase extension is not recognized)
foreach (FILE_ASM IN LISTS SOURCES_FILES_ASM SOURCES_FILES_ASM_DOS)
  set_source_files_properties(${FILE_ASM} PROPERTIES LANGUAGE ASM_MASM)
endforeach ()
