# General sources
set(SOURCES_FILES CLIP.CPP DIRTYBOX.CPP GPRINTF.CPP GRAPH.CPP INITMODE.CPP PLOT.CPP RECT.CPP SCREEN.CPP
        SCREENXY.CPP SDL.CPP)

# set(SOURCES_FILES_ASM AFFSTR.ASM BLITBOXF.ASM BOX.ASM CALCMASK.ASM CLIP.ASM CLRBOXF.ASM COPYMASK.ASM
#         CPYBLOCI.ASM CPYBLOCK.ASM FONT.ASM GRAPH.ASM MASK.ASM RESBLOCK.ASM SAVBLOCK.ASM SCALEBOX.ASM SCALESPI.ASM
#         SCALESPT.ASM)
set(SOURCES_FILES_ASM AFFSTR.CPP BLITBOXF.CPP BOX.CPP CALCMASK.CPP CLIP.CPP CLRBOXF.CPP COPYMASK.CPP
        CPYBLOCI.CPP CPYBLOCK.CPP FONT.CPP GRAPH.CPP MASK.CPP RESBLOCK.CPP SAVBLOCK.CPP SCALEBOX.CPP SCALESPI.CPP
        SCALESPT.CPP)

add_library(svg ${SOURCES_FILES} ${SOURCES_FILES_ASM})
target_link_libraries(svg PUBLIC sys SDL2::SDL2)

# Configure all ASM files to be recognized as such (workaround for bug where .ASM uppercase extension is not recognized)
# foreach (FILE_ASM IN LISTS SOURCES_FILES_ASM)
#   set_source_files_properties(${FILE_ASM} PROPERTIES LANGUAGE ASM_MASM)
# endforeach ()
