# General sources
set(SOURCES_FILES AVAILMEM.CPP CMDLINE.CPP CPU.CPP DEFFILE.CPP DISKDIR.CPP DISPCPU.CPP DISPOS.CPP EVENTS.CPP EXIT.CPP
        FILEBAK.CPP FILECOPY.CPP FILENAME.CPP FILES.CPP HQFILE.CPP HQMEM.CPP HQRLOAD.CPP HQRMEM.CPP HQRMLOAD.CPP
        HQRRESS.CPP INPUT.CPP ITOA.CPP KEYBOARD.CPP LOADMALL.CPP LOADSAVE.CPP LOGPRINT.CPP MOUSE.CPP N_MALLOC.CPP
        PATCH.CPP SYSTEM.CPP TIMER.CPP WINDOW.CPP)

set(SOURCES_FILES_ASM CHOOSER.ASM CPU.ASM FASTCPY.ASM FASTCPYF.ASM FASTCPYI.ASM FASTSET.ASM FASTSETF.ASM FASTSETI.ASM
        LZ.ASM MOUSEDAT.ASM)

# Files present normally but excluded on reference implementation by Yaz0r
set(SOURCES_FILES_EXCLUDED S_MALLOC.CPP)
set(SOURCES_FILES_ASM_EXCLUDED FASTCPYM.ASM FASTSETM.ASM)

# Windows specific sources
set(SOURCES_FILES_ASM_WIN PATCH.ASM)

# DOS specific sources
set(SOURCES_FILES_DOS A_MALLOC.CPP DOSSYS.CPP)
set(SOURCES_FILES_ASM_DOS DOSMALLO.ASM KEYBDOS.ASM TIMERDOS.ASM)

add_library(sys ${SOURCES_FILES} ${SOURCES_FILES_ASM} ${SOURCES_FILES_ASM_WIN})

# Configure all ASM files to be recognized as such (workaround for bug where .ASM uppercase extension is not recognized)
foreach (FILE_ASM IN LISTS SOURCES_FILES_ASM SOURCES_FILES_ASM_WIN SOURCES_FILES_ASM_DOS)
    set_source_files_properties(${FILE_ASM} PROPERTIES LANGUAGE ASM_MASM)
endforeach ()

# Source files in folder but not used on CMakeScript:
# - SCANINP.CPP
# - WIN.CPP
