# General sources
set(SOURCES_FILES AVAILMEM.CPP CMDLINE.CPP DEFFILE.CPP DIRECTORIES.CPP DISPCPU.CPP DISPOS.CPP EVENTS.CPP EXIT.CPP
        FILECOPY.CPP FILENAME.CPP FILES.CPP HQFILE.CPP HQMEM.CPP HQRLOAD.CPP HQRMEM.CPP HQRMLOAD.CPP HQRRESS.CPP
        INITADEL.C INPUT.CPP ITOA.CPP KEYBOARD.CPP LOADMALL.CPP LOADSAVE.CPP LOGPRINT.CPP MOUSE.CPP N_MALLOC.CPP
        PATCH.CPP S_MALLOC.CPP STRING.CPP SYSTEM.CPP TIMER.CPP WINDOW.CPP)

set(SOURCES_FILES_ASM CPU.ASM FASTCPYF.ASM LZ.ASM MOUSEDAT.ASM)

# Windows specific sources
set(SOURCES_FILES_ASM_WIN PATCH.ASM)

add_library(sys ${SOURCES_FILES} ${SOURCES_FILES_ASM} ${SOURCES_FILES_ASM_WIN})
target_link_libraries(sys svg)

# Configure all ASM files to be recognized as such (workaround for bug where .ASM uppercase extension is not recognized)
foreach (FILE_ASM IN LISTS SOURCES_FILES_ASM SOURCES_FILES_ASM_WIN)
    set_source_files_properties(${FILE_ASM} PROPERTIES LANGUAGE ASM_MASM)
endforeach ()
