set(SOURCES_FILES POLY.CPP)

# set(SOURCES_FILES_ASM POLY.ASM POLY_JMP.ASM POLYCLIP.ASM POLYDISC.ASM POLYFLAT.ASM POLYGOUR.ASM
#         POLYGTEX.ASM POLYLINE.ASM POLYLINE.ASM POLYTEXT.ASM POLYTEXT.ASM POLYTEXZ.ASM POLYTZF.ASM POLYTZG.ASM
#         TESTVUEF.ASM)
set(SOURCES_FILES_ASM POLY.CPP POLY_JMP.CPP POLYCLIP.CPP POLYDISC.CPP POLYFLAT.CPP POLYGOUR.CPP
        POLYGTEX.CPP POLYLINE.CPP POLYLINE.CPP POLYTEXT.CPP POLYTEXT.CPP POLYTEXZ.CPP POLYTZF.CPP POLYTZG.CPP
        TESTVUEF.CPP)

add_library(poly ${SOURCES_FILES} ${SOURCES_FILES_ASM})

# Propagate ENABLE_POLY_RECORDING to the poly library so recording hooks compile
if(ENABLE_POLY_RECORDING)
  target_compile_definitions(poly PRIVATE ENABLE_POLY_RECORDING)
endif()

# Force x87 FPU math for files that must match ASM fistp rounding behaviour (x86 only).
if(CMAKE_SYSTEM_PROCESSOR MATCHES "i[3-6]86|x86_64|AMD64")
  set_source_files_properties(POLY.CPP POLYTEXZ.CPP POLYTZF.CPP PROPERTIES COMPILE_FLAGS "-mfpmath=387")
endif()

# Configure all ASM files to be recognized as such (workaround for bug where .ASM uppercase extension is not recognized)
# foreach (FILE_ASM IN LISTS SOURCES_FILES_ASM)
#     set_source_files_properties(${FILE_ASM} PROPERTIES LANGUAGE ASM_MASM)
# endforeach ()
